1. Open component (spreadsheet for instance) 2. Go to File -> Print 3. Click on options tab 4. Check "print to file" 5. Click on "Print to file" button at bottom Result - CRASH Expected - No crash, save dialog comes up for pdf creation Makes triage work quite difficult without this option. Regression since 4.0.0.3 release
I can confirm this using Mac OSX 10.8.2 LibreOffice Version 4.1.0.0.alpha0+ (Build ID: 871712ad62bb01359c29713a148a5673e26df1a) TinderBox: MacOSX-Intel@1-built_no-moz_on_10.6.8, Branch:master, Time: 2013-02-13_00:15:32
Also can reproduce using Linux Mint 14 x64 and LibreOffice Version 4.1.0.0.alpha0+ (Build ID: cbc722733bb272b0f26efec09b478bed9a3cdb9) Console output: terminate called after throwing an instance of 'com::sun::star::uno::DeploymentException' Exited with code '134'
Can't bibisect this using bibisect40 package. This feature works using latest version ( Version 4.1.0.0.alpha0+ (Build ID: 8450a99c744e9005f19173e4df35d65640bcf5c )
Created attachment 74782 [details] backtrace log
Hey Stephan, this one is for you. This regression is related to the uno conversion from Noel in print3.cxx
Found the bug, somehow I forgot to make SalGtkFilePicker.cxx implement XFilePicker3. Will have a fix in a day or so.
Noel Grandin committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=3164966103b7d5c19197b7e94040d585e5af04ac fix fdo#60804 - Print to File leads to Crash The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Noel, is this fixed? It's at least assigned so setting to assigned.
@stevebell: I see you changed the bug status from NEW to ASSIGNED, but there is nobody in the 'assigned to' field. Therefore I mark it back to NEW.
(In reply to comment #8) > Noel, is this fixed? It's at least assigned so setting to assigned. Sorry about my previous comment, I think I was handling a bit to fast. Because of the fix of Noel, I mark this as RESOLVED FIXED. @Joel: I think you know what to do if this is still reproducible ;-) Sorry for the status ping-pong.