fix fdo#60804 - Print to File leads to Crash

This was because of my busted commit in
4b51374a7021d52f7f1be1861e2ee6a011b30ecd
"fdo#46808, Adapt ui::dialogs::FilePicker UNO service to new style"

Change-Id: Iaf99dcf052b5aac7f995b86a0e8af9725839802d